--- a/Sunny/electron_preping/electron_chat/package.json
+++ b/Sunny/electron_preping/electron_chat/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "firebase": "^3.6.4",
     "photon": "github:connors/photon",
     "react": "^15.4.2",
@@ -22,6 +23,7 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "dotenv": "^8.2.0",
     "electron": "^1.6.1"
   }
 }
