--- a/Sunny/electron_preping/markdown_editor/package.json
+++ b/Sunny/electron_preping/markdown_editor/package.json
@@ -4,40 +4,26 @@
   "description": "",
   "main": "dist/main/index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "watch": "webpack -w",
-    "start": "electron .",
-    "eslint": "eslint \"src/**/*.{js,jsx}\"",
-    "lint": "npm run eslint; stylelint src/**/*.css"
+    "watch": "webpack --watch",
+    "start": "electron ."
   },
-  "keywords": [],
   "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "marked": "^0.3.5",
-    "photon": "github:connors/photon",
-    "react": "15.4.2",
-    "react-dom": "15.4.2"
-  },
+  "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "6.16.0",
-<<<<<<< HEAD
+    "babel-preset-react": "^6.16.0",
     "css-loader": "^0.23.1",
     "electron": "^1.6.1",
-=======
-    "css-loader": "0.23.1",
-    "electron": "8.0.3",
->>>>>>> eaa21574982bd2cf64572e5611b2ccefa357e712
-    "eslint": "3.14.1",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-react": "^6.9.0",
-    "marked": "^0.3.5",
     "style-loader": "^0.13.1",
-    "stylelint": "^7.7.1",
-    "stylelint-config-standard": "^15.0.1",
     "webpack": "^2.2.0"
+  },
+  "dependencies": {
+    "photon": "github:connors/photon",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
